--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ li {
   margin: 150px 20px -150px 20px;
 }
 
+
 .atlas-image {
   display: block;
   margin: auto;
@@ -31,6 +32,8 @@ li {
 .login-box {
   border-radius: 15px;
   box-shadow: 0 15px 20px 0 rgba(0, 0, 0, .3);
+  background-color: #fff;
+  margin: 100px 0 100px 0;
 }
 
 .sex-select {
@@ -153,6 +156,7 @@ li {
   color: #FF0000;
 }
 
+
 .past-day {
   background: #EEE;
 }
@@ -191,6 +195,7 @@ li {
 .adjust-table-btn {
   width: 70%;
 }
+
 
 /* モーダル */
 .modal {
